@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3c.org/1999/xhtml" lang="EN">
+<head>
+	<title>Manatee: Suggest a Category</title>
+	<link rel="stylesheet" type="text/css" href="main.css" />
+</head>
+<body>
+	<p>Return to <a href="ccowhelp.py">CCOW helper</a></p>
+Nothing to see, yet.
+  <p>Build #{{ var['build'] }}</p>
+</body>
+</html>
